# only_alloc

./: Cargo.toml  README.md
src/: lib.rs
tests/: mimalloc.rs
