[package]
name = "only_alloc"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
alloc-metrics = { version = "0.1.1", default-features = false, features = ["global"] }
mimalloc = { version = "0.1.44", features = ["secure"] }
rand = "0.9.0"
# tikv-jemallocator = "0.6.0"

[features]
alloc_trait = []
