[package]
name = "only_alloc"
version = "0.1.0"
edition = "2021"
description = "An allocator wrapper that disables deallocating memory within it."
authors = ["Kyza"]
license = "MIT"
homepage = "https://github.com/Kyza/only_alloc"
keywords = ["allocator", "memory", "no_std", "no-std"]
categories = ["memory-management", "no-std"]

[dependencies]

[dev-dependencies]
alloc-metrics = { version = "0.1", default-features = false, features = [
	"global",
] }
mimalloc = { version = "0.1", features = ["secure"] }
rand = "0.9"

[features]
alloc_trait = []
